--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
         <div id="content" class="">
             <article>
                 <button id="startButton" type="button">Start Game</button>
-                <div class="flip-container">
-                    <div class="flipper">
-                        <div class="front front-card">
-                        </div>
-                        <div class="back">
-                        </div>
+                <div class="scene scene--card">
+                    <div class="card">
+                      <div class="card__face card__face--front"></div>
+                      <div class="card__face card__face--back"></div>
                     </div>
+                  </div>
+                  <div class="scene scene--card">
+                    <div class="card">
+                      <div class="card__face card__face--front"></div>
+                      <div class="card__face card__face--back"></div>
+                    </div>
+                  </div>
                 </div>
             </article>
             <article class="">
