--- a/index.html
+++ b/index.html
@@ -13,20 +13,25 @@
     <main>
         <div id="content" class="">
             <article>
-                <button id="startButton" type="button">Start Game</button>
-                <div class="scene scene--card">
-                    <div class="card">
-                      <div class="card__face card__face--front"></div>
-                      <div class="card__face card__face--back"></div>
-                    </div>
-                  </div>
-                  <div class="scene scene--card">
-                    <div class="card">
-                      <div class="card__face card__face--front"></div>
-                      <div class="card__face card__face--back"></div>
-                    </div>
-                  </div>
+                <div>
+                    <div class="countdown">3</div>
+                    <button id="startButton" type="button">Start Game</button>
                 </div>
+                <div class="card-holder">
+                    <div class="scene scene--card">
+                        <div class="card">
+                        <div class="card__face card__face--front"></div>
+                        <div class="card__face card__face--back"></div>
+                        </div>
+                    </div>
+                    <div class="scene scene--card">
+                        <div class="card">
+                        <div class="card__face card__face--front"></div>
+                        <div class="card__face card__face--back"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             </article>
             <article class="">
                 <h1>Tentang PDKT:</h1>
