--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
                 <div class="card-holder">
                     <div class="scene scene--card">
                         <div class="card">
-                        <div class="card__face card__face--front"></div>
-                        <div class="card__face card__face--back"></div>
+                        <div id="card_front_1" class="card__face card__face--front"></div>
+                        <div id="card_back_1" class="card__face card__face--back">TEST 123</div>
                         </div>
                     </div>
                     <div class="scene scene--card">
                         <div class="card">
-                        <div class="card__face card__face--front"></div>
-                        <div class="card__face card__face--back"></div>
+                        <div id="card_front_2" class="card__face card__face--front"></div>
+                        <div id="card_back_2" class="card__face card__face--back">TEST 123</div>
                         </div>
                     </div>
                 </div>
