--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <button id="startButton" type="button">Start Game</button>
                 </div>
                 <div class="card-holder">
-                    <div class="scene scene--card">
+                    <div class="scene scene--card card-1">
                         <div class="card">
                         <div id="card_front_1" class="card__face card__face--front"></div>
                         <div id="card_back_1" class="card__face card__face--back">TEST 123</div>
