--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>PDKT - Dekat melalui kartu</h1>
+        <img class="img-logo" src="assets/logo.png" alt="MomaBobaStudio Logo">
+        <h1>PDKT<span style="font-family: 'Times New Roman', Times, serif; font-style: italic;">- Dekat melalui kartu</span></h1>
     </header>
     <main>
         <div id="content" class="">
