--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         <h1>PDKT<span style="font-family: 'Times New Roman', Times, serif; font-style: italic;">- Dekat melalui kartu</span></h1>
     </header>
     <main>
-        <div id="content" class="">
-            <article>
-                <div>
-                    <div class="countdown">3</div>
+        <div class="content">
+            <article class="">
+                <div class="">
+                    <div>
+                        <h1 class="countdown">PDKT<br>yuk!</h1>
+                    </div>
                     <button id="startButton" type="button">Start Game</button>
                 </div>
                 <div class="card-holder">
@@ -32,7 +34,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
             </article>
             <article class="">
                 <h1>Tentang PDKT:</h1>
