--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </header>
     <main>
         <div class="content">
-            <article class="">
-                <div class="">
+            <article class="game-screen">
+                <div class="start-menu">
                     <div>
                         <h1 class="countdown">PDKT<br>yuk!</h1>
                     </div>
