--- a/index.html
+++ b/index.html
@@ -24,25 +24,33 @@
                     <div class="scene scene--card card-1">
                         <div class="card">
                         <div id="card_front_1" class="card__face card__face--front"></div>
-                        <div id="card_back_1" class="card__face card__face--back">TEST 123</div>
+                        <div class="card__face card__face--back">
+                            <div id="card_back_1" class="card-text-area">
+                                Test
+                            </div>
+                        </div>
                         </div>
                     </div>
                     <div class="scene scene--card">
                         <div class="card">
                         <div id="card_front_2" class="card__face card__face--front"></div>
-                        <div id="card_back_2" class="card__face card__face--back">TEST 123</div>
+                        <div class="card__face card__face--back">
+                            <div id="card_back_2" class="card-text-area">
+                                Test
+                            </div>
+                        </div>
                         </div>
                     </div>
                 </div>
             </article>
-            <article class="">
-                <h1>Tentang PDKT:</h1>
-                <p>Game ini adalah</p>
+            <article class="description">
+                <h1><span style="font-family: 'Bukhari-Script'">Tentang PDKT:</span></h1>
+                <p>Tak kenal maka tak sayang. Tapi gimana mau kenal kalau mulai perbincangan aja sulit? Jangan khawatir, disini ada kartu PDKT untuk menemani kalian. Nantikan edisi terbaru yang akan datang, karena PDKT membuat kamu dekat melalui kartu</p>
             </article>
         </div>
         <aside>
-            <img src="assets/Face.png" alt="Foto Ardan" width="25%">
-            <h3>Name: Aulia Rahman Ardan</h3>
+            <img class="img-face" src="assets/Face.png" alt="Foto Ardan" width="50%">
+            <h3>Aulia Rahman Ardan</h3>
             <p>Founder and Developer of MomaBobaStudio</p>
             <a href="https://linktr.ee/InspiredByArdan" target="_blank">Other Projects</a> 
         </aside>
