--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img class="img-logo" src="assets/logo.png" alt="MomaBobaStudio Logo">
-        <h1>PDKT<span style="font-family: 'Times New Roman', Times, serif; font-style: italic;">- Dekat melalui kartu</span></h1>
+        <h1>50 COLORS OF US</h1>
     </header>
     <main>
         <div class="content">
