--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>PDKT dengan kartu</title>
     <meta name="author" content="Aulia Rahman Ardan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="http://fonts.cdnfonts.com/css/gagalin" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
@@ -16,7 +17,7 @@
             <article class="game-screen">
                 <div class="start-menu">
                     <div>
-                        <h1 class="countdown">PDKT<br>yuk!</h1>
+                        <h1 class="countdown">50 COLORS<br>OF US!</h1>
                     </div>
                     <button id="startButton" type="button">Start Game</button>
                 </div>
@@ -44,8 +45,8 @@
                 </div>
             </article>
             <article class="description">
-                <h1><span style="font-family: 'Bukhari-Script'">Tentang PDKT:</span></h1>
-                <p>Tak kenal maka tak sayang. Tapi gimana mau kenal kalau mulai perbincangan aja sulit? Jangan khawatir, disini ada kartu PDKT untuk menemani kalian. Nantikan edisi terbaru yang akan datang, karena PDKT membuat kamu dekat melalui kartu</p>
+                <h1>About 50 Colors of Us</h1>
+                <p>Life is but a bunch of colors mixed together, twisting and turning to create unique shades and contrasts. How could 2 colors unite, if they truly have not understood each other? 50 Colors of Us is here to help you know more about each other, in a fun way!</p>
             </article>
         </div>
         <aside>
@@ -56,7 +57,7 @@
         </aside>
     </main>
     <footer>
-        <p>Copyright MomaBobaStudio 2022-</p>
+        <p>© MomaBobaStudio <script>document.write(new Date().getFullYear());</script></p>
     </footer>
     <script src="assets/MainBrain.js"></script>
 </body>
